Add title to slide item

--- a/index.html
+++ b/index.html
@@ -313,34 +313,34 @@
                                         <div class="slider-container">
                                             <!-- slick 초기화 대상 -->
                                             <div class="slider">
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing1.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing2.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing3.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing4.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing5.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing6.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing7.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing8.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing9.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/wing/wing10.jpg)">
                                                 </div>
                                             </div>
@@ -457,34 +457,34 @@
                                         <div class="slider-container">
                                             <!-- slick 초기화 대상 -->
                                             <div class="slider">
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark01.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark02.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark03.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark04.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark05.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark06.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark07.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark08.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark09.jpg)">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio//playpark/playpark10.jpg)">
                                                 </div>
                                             </div>
@@ -621,31 +621,31 @@
                                         <div class="slider-container">
                                             <!-- 슬라이더 -->
                                             <div class="slider">
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/groove_thb.jpg);"
                                                     data-video-src="./src/img/portfolio/yg-personal/groove_ucc.mp4">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/dodum_thb.jpg);"
                                                     data-video-src="./src/img/portfolio/yg-personal/dodum_ucc.mp4">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/doughnuts01.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/doughnuts02.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/doughnuts03.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/doughnuts04.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/ecoce_thb.jpg);"
                                                     data-video-src="./src/img/portfolio/yg-personal/ecoce_ucc.mp4">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-personal/firstF_thb.jpg)"
                                                     data-video-src="./src/img/portfolio/yg-personal/firstF2.mp4"></div>
                                             </div>
@@ -749,22 +749,22 @@
                                         <div class="slider-container">
                                             <!-- 슬라이더 -->
                                             <div class="slider">
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio01.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio02.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio03.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio04.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio05.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/portfolio2022/portfolio06.jpg);">
                                                 </div>
                                             </div>
@@ -841,42 +841,42 @@
                                             <!-- 슬라이더 -->
                                             <div class="slider">
                                                 <!-- 고스트북스 -->
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ghost01.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ghost02.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ghost03.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ghost04.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ghost05.jpg);">
                                                 </div>
                                                 <!-- 플래깅 -->
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/flagging_thb.jpg);"
                                                     data-video-src="./src/img/portfolio/yg-team/flagging_ucc.mp4">
                                                 </div>
                                                 <!-- 윈드밀팍스 -->
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/windmill_thb.jpg);"
                                                     data-video-src="./src/img/portfolio/yg-team/windmill_ucc.mp4">
                                                 </div>
                                                 <!-- 영진 리뉴얼 -->
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ygre01.jpg);">
                                                 </div>
-                                                <div class="slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ygre02.jpg);">
                                                 </div>
-                                                <div class="slide-item"
-                                                    style="background-image: url(./src/img/portfolio/yg-team/ygre03.jpg);"">
-                                        </div>
-                                        <div class=" slide-item"
+                                                <div class="slide-item" title="슬라이드 이미지 (클릭 시 확대)"
+                                                    style="background-image: url(./src/img/portfolio/yg-team/ygre03.jpg);">
+                                                </div>
+                                                <div class=" slide-item" title="슬라이드 이미지 (클릭 시 확대)"
                                                     style="background-image: url(./src/img/portfolio/yg-team/ygre04.jpg);">
                                                 </div>
                                             </div>
