Fix section height

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                     </div>
                                 </div>
                                 <div class='portfolio-arrow'>
-                                    <svg class='' width="6.206" height="10.412" viewBox="0 0 6.206 10.412">
+                                    <svg class='open' width="6.206" height="10.412" viewBox="0 0 6.206 10.412">
                                         <path d="M23,2039.016l5,4.5h0l-5,4.5" transform="translate(-22.294 -2038.31)"
                                             fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round"
                                             stroke-width="1" />
